--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,19 +1,39 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+  /* color-scheme: light dark; */
+  /* background-color: #242424; */
+  /* -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
 }
 
 a {
+  &.active {
+    color: #535bf2;
+    font-weight: bold;
+  }
+
+  &:hover {
+    font-weight: bold;
+  }
+}
+
+/* @layer base { 
+  html {
+    @apply bg-gray-900 text-white;
+  }
+} */
+
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -21,6 +41,7 @@ a {
 a:hover {
   color: #535bf2;
 }
+
 
 body {
   margin: 0;
@@ -65,4 +86,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
