--- a/frontend/src/components/PostCard.module.css
+++ b/frontend/src/components/PostCard.module.css
@@ -3,3 +3,8 @@
   flex-direction: column;
   border: 1px solid #ccc;
 }
+
+.postCardContainer:hover {
+  border-color: #646cff;
+  background-color: #f0f0f0;
+}
