--- a/frontend/src/components/PostCard.module.css
+++ b/frontend/src/components/PostCard.module.css
@@ -1,7 +1,7 @@
 .postCardContainer {
   display: flex;
   flex-direction: column;
-  border: 1px solid #ccc;
+  border: 1px dashed white;
 }
 
 .postCardContainer:hover {
