--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,81 +22,37 @@ a {
   }
 }
 
+.modern-layout {
+  /* background: white;
+  border-radius: 2px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
+}
+
 @layer base {
   h1 {
-    @apply text-6xl text-gray-800;
-    font-weight: bold;
-    margin-bottom: 1rem;
+    @apply text-7xl text-gray-600;
+    font-weight: 800;
+    margin-bottom: 1.5rem;
+    padding-bottom: 0.75rem;
+    border-bottom: 1px solid #acadae;
   }
   h2 {
-    @apply text-4xl text-gray-600;
-    font-weight: bold;
+    @apply text-5xl text-gray-700;
+    font-weight: 700;
+    margin-bottom: 1rem;
+  }
+  h3 {
+    @apply text-xl text-gray-600;
+    font-weight: 300;
     margin-bottom: 0.75rem;
   }
+  h4 {
+    @apply text-2xl text-gray-500;
+    font-weight: 300;
+  }
   p {
-    @apply text-xl text-gray-700 leading-relaxed mb-4;
+    @apply text-xl text-gray-600 leading-relaxed mb-6;
     line-height: 1.75;
-    margin-bottom: 1.5rem;
+    margin-bottom: 2rem;
   }
 }
-
-/* @layer base { 
-  html {
-    @apply bg-gray-900 text-white;
-  }
-} */
-
-/* a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
