--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Roboto", system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -13,12 +15,15 @@
 
 a {
   &.active {
-    @apply text-yellow-300;
+    @apply text-blue-700;
     font-weight: bold;
   }
 
   &:hover {
     font-weight: bold;
+    @apply text-blue-400;
+    /* text-decoration: underline; */
+    transition: color 0.3s ease, text-decoration 0.3s ease;
   }
 }
 
@@ -54,5 +59,18 @@ a {
     @apply text-xl text-gray-600 leading-relaxed mb-6;
     line-height: 1.75;
     margin-bottom: 2rem;
+  }
+}
+
+@layer utilities {
+  .border-b-gradient {
+    border-bottom-width: 1px; /* Adjust the width of the border as needed */
+    border-image: linear-gradient(
+        to right,
+        transparent 10%,
+        black 50%,
+        transparent 90%
+      )
+      1;
   }
 }
